# vqx

./: .gitignore  Cargo.toml  README.md  README_ja.md  SECURITY.md  SECURITY_ja.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
examples/: config.toml  profiles.toml
src/: cli.rs  config.rs  error.rs  main.rs  normalizer.rs  profile.rs  underlying.rs
src/commands/: diff.rs  doctor.rs  export.rs  external.rs  import.rs  mod.rs  passthrough.rs  profile.rs  promote.rs  run.rs  safe_delete.rs  sync.rs
